# Seekira

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  version.h.in
src/application/: CMakeLists.txt  registrator.cpp  registrator.hpp
src/base/: CMakeLists.txt  global.hpp
src/base/interfaces/: event_handler_list.hpp  serializable.hpp
src/base/types/: config_fields.cpp  config_fields.hpp  math_constants.hpp  meta_storage.cpp  meta_storage.hpp  noise_settings.cpp  noise_settings.hpp  object.cpp  object.hpp  pose.cpp  pose.hpp  time.cpp  time.hpp
src/base/utils/: execution_barrier.hpp  find_pair.hpp  json_utils.cpp  json_utils.hpp  log_utils.cpp  log_utils.hpp  rvision_assert.hpp  string_utils.cpp  string_utils.hpp  thread_guard.hpp  throw_utils.cpp  throw_utils.hpp  time_utils.cpp  time_utils.hpp  type_utils.hpp
src/base/utils/exception/: assert.hpp  throw_utils.cpp  throw_utils.hpp
src/base/utils/json/: json_utils.cpp  json_utils.hpp
src/base/utils/thread/: execution_barrier.hpp  thread_pool.cpp  thread_pool.hpp  thread_pool_event_handler.cpp  thread_pool_event_handler.hpp  thread_pool_execute_policy.hpp  thread_utils.hpp  thread_worker.hpp
src/core/base/: CMakeLists.txt
src/core/base/interfaces/: blob.hpp  connector.cpp  connector.hpp  event_handler_list.hpp  event_publisher.hpp  serializable.hpp  user_controller.hpp
src/core/base/json/: json_types.hpp  json_utils.cpp  json_utils.hpp
src/core/base/types/: color.cpp  color.hpp  config_fields.cpp  config_fields.hpp  interpolation.cpp  interpolation.hpp  media_types.cpp  media_types.hpp  meta_storage.cpp  meta_storage.hpp  noise_settings.cpp  noise_settings.hpp  point2d.cpp  point2d.hpp  pose.cpp  pose.hpp  rect.cpp  rect.hpp  time.cpp  time.hpp
src/core/base/utils/: find_pair.hpp  scope_exit.hpp  string_utils.cpp  string_utils.hpp  time_utils.cpp  time_utils.hpp  type_utils.hpp
src/core/exception/: CMakeLists.txt  assert.hpp  throw_utils.cpp  throw_utils.hpp
src/core/pipeline/: CMakeLists.txt  pipeline.hpp  pipeline_branch.hpp  pipeline_node.hpp  pipeline_settings.cpp  pipeline_settings.hpp  pipeline_task.hpp
src/core/pipeline/nodes/: empty_node.cpp  empty_node.hpp  exception_node.cpp  exception_node.hpp  input_node.cpp  input_node.hpp
src/core/threading/: CMakeLists.txt  execution_barrier.hpp  thread_guard.hpp  thread_pool.hpp  thread_pool_event_handler.cpp  thread_pool_event_handler.hpp  thread_pool_execute_policy.hpp  thread_pool_worker.hpp  thread_utils.hpp  thread_worker.cpp  thread_worker.hpp
src/gui/: CMakeLists.txt
src/gui/app/: CMakeLists.txt  main.cpp
src/gui/app/seekira/: CMakeLists.txt  main.cpp
src/gui/application/: CMakeLists.txt  application.cpp  application.hpp
src/gui/interfaces/: CMakeLists.txt  declare_metatype.hpp  enums.cpp  enums.hpp  objects_connector_id.hpp  player_controller.hpp  stub.cpp  video_frame_provider.cpp  video_frame_provider.hpp
src/gui/resources/: CMakeLists.txt  resources.qrc
src/gui/resources/qml/: main.qml
src/gui/resources/video_processing/: video_processing_manager.json
src/gui/ui/: CMakeLists.txt  main_window.cpp  main_window.hpp
src/gui/ui/controllers/: gui_controller.cpp  gui_controller.hpp  player_controller_ff.cpp  player_controller_ff.hpp
src/gui/ui/video/: video_frame_provider.cpp  video_frame_provider.hpp  video_frame_provider_ff.cpp  video_frame_provider_ff.hpp
src/gui/utils/: CMakeLists.txt  forwarder.cpp  forwarder.hpp  high_dpi_fix.cpp  high_dpi_fix.hpp  log_handler.cpp  log_handler.hpp  objects_connector.cpp  objects_connector.hpp  qimage_utils.cpp  qimage_utils.hpp  spontaneous_dialog.cpp  spontaneous_dialog.hpp
src/proc/detect/: CMakeLists.txt  face_detector.cpp  person_detector.cpp  registrator.hpp
src/proc/detect/face/: face_detector_factory.cpp  face_detector_factory.hpp  face_detector_tdv.cpp
src/proc/effects/: CMakeLists.txt  effect_empty.cpp  effect_resizer.cpp  registrator.hpp
src/proc/interfaces/: CMakeLists.txt  detector_interface.hpp  device_type.cpp  device_type.hpp  drawer_interface.hpp  effect_interface.hpp  face.hpp  face_engine.cpp  face_engine.hpp  face_engine_controller.cpp  face_engine_controller.hpp  face_engine_type.cpp  face_engine_type.hpp  face_engine_user.hpp  neural_net_interface.hpp  string_utils.cpp  stub.cpp  tracker_interface.hpp  tracking_engine.hpp  tracking_object.hpp  video_processor_interface.hpp
src/proc/pipeline/: CMakeLists.txt  frame_pipeline.cpp  frame_pipeline.hpp  pipeline.hpp  pipeline_branch.hpp  pipeline_data.hpp  pipeline_node.hpp  pipeline_settings.cpp  pipeline_settings.hpp  pipeline_task.hpp
src/proc/pipeline/async/: async_pipeline.hpp  async_pipeline_branch.hpp
src/proc/pipeline/impl/: frame_async_pipeline.cpp  frame_pipeline.cpp  frame_pipeline.hpp
src/proc/pipeline/nodes/: drawer_node.cpp  drawer_node.hpp  empty_node.cpp  empty_node.hpp  exception_node.cpp  exception_node.hpp  face_detection_node.cpp  face_detection_node.hpp  face_matcher_node.cpp  face_matcher_node.hpp  face_recognition_node.cpp  face_recognition_node.hpp  input_node.cpp  input_node.hpp  person_detection_node.cpp  person_detection_node.hpp  resizer_node.cpp  resizer_node.hpp
src/proc/pipeline/sync/: sync_pipeline.hpp
src/video/camera/camera_fake/: CMakeLists.txt  fake_camera.cpp  fake_camera.hpp  fake_camera_settings.cpp  fake_camera_settings.hpp
src/video/camera/interfaces/: CMakeLists.txt  camera.hpp  camera_factory.hpp
src/video/ffmpeg/interfaces/: CMakeLists.txt  data_packet.hpp  demuxer.hpp  format_codec.hpp  reader.cpp  reader.hpp  stream.hpp  stream_reader.hpp  stub.cpp  types.hpp  types_safe.hpp
src/video/frame/interfaces/: frame.hpp  (+6 more)
tests/: CMakeLists.txt
tests/gui/: CMakeLists.txt
tests/gui/image_utils/: CMakeLists.txt  image_utils_tests.cpp
tests/proc/: CMakeLists.txt
tests/proc/detect/: CMakeLists.txt
tests/video/: CMakeLists.txt
tests/video/camera_fake/: CMakeLists.txt  fake_camera_tests.cpp
tests/video/ffmpeg/: CMakeLists.txt  ff_tests.cpp
tests/video/frame/: CMakeLists.txt  frame_tests.cpp
tests/video/pipeline/: CMakeLists.txt
(+284 files in other folders)
